# AiTex

./: .gitignore  CLAUDE.md  README.md  README_EN.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: check-ubuntu-version.sh  install-deps.sh  install-webkit.sh  upgrade-tauri-v1.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ImageViewer.tsx  LatexRenderer.tsx  SettingsDialog.tsx  Toolbar.tsx
src/hooks/: useApi.ts
src/services/: api.ts
src/types/: config.ts
