[package]
name = "aitex"
version = "2.0.0"
description = "AiTex - 智能数学公式识别软件"
authors = ["zstar1003"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
image = { version = "0.24", features = ["png"] }
base64 = "0.22"
arboard = "3.2"
anyhow = "1.0"
dirs = "5.0"

[lib]
name = "aitex_lib"
crate-type = ["cdylib"]

[[bin]]
name = "aitex"
path = "src/main.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
