[package]
name = "aitex"
version = "0.1.0"
description = "AiTex - 智能数学公式识别软件"
authors = ["zstar1003"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-read-file", "protocol-asset", "shell-open", "fs-remove-dir", "path-all", "fs-remove-file", "fs-read-dir", "fs-copy-file", "fs-write-file", "fs-rename-file", "fs-create-dir", "dialog-save", "dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
image = { version = "0.24", features = ["png"] }
base64 = "0.21"
arboard = "2.1"
anyhow = "1.0"
dirs = "5.0"
tempfile = "3.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
